# llm-eval-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-flow/data/: pending-insights.jsonl
.github/workflows/: nightly_eval.yml  pr_eval.yml
app/: streamlit_app.py
dashboard/: grafana_dashboard.json
evals/: config.py  gate.py  judge.py
evals/datasets/: golden_edge.json  golden_general.json  golden_news.json  golden_rag.json
evals/metrics/: custom_metrics.py  thresholds.py
evals/reporting/: grafana_pusher.py  langfuse_logger.py  slack_alert.py
evals/runners/: run_cost.py  run_deepeval.py  run_latency.py  run_ragas.py
evals/tests/: test_component_level.py  test_general_quality.py  test_rag_quality.py
scripts/: drift_detector.py  make_news_goldens.py  promote_failures.py  synthesize_goldens.py
system_under_test/: llm_app.py  rag_pipeline.py
tests/: conftest.py  test_config.py  test_cost_summary.py  test_datasets.py  test_drift_detector.py  test_gate.py  test_thresholds.py
